# deim2026

./: pyproject.toml
runs/2025-12-09/: _main.py  extract_cirr_image_features.py  extract_cirr_text_features.py  extract_fashioniq_image_features.py  extract_fashioniq_text_features.py  main.py  test.py  test_image_encoder.py  test_text_encoder.py  tmp.py  train_cirr_topk_contrasive.py  train_fashioniq_delta_topk_contrasive.py  train_fashioniq_topk_bi_contrasive.py  train_fashioniq_topk_contrasive.py  validate.py  validate_cirr.py  visualize_retrival.py
runs/2025-12-30/: lexical_cir_model.py
runs/2025-12-30/scripts/: eval_lasco_sanity_baselines.py  precompute_lasco_dense.py  precompute_lasco_ref_lexical_topk.py  train_lexical_cir_lasco_cached.py  train_lexical_cir_lasco_cached_hn.py  train_lexical_cir_lasco_cached_hn_bow.py  validate_lexical_cir.py  validate_lexical_cir_circo_official.py  validate_lexical_cir_cirr_circo.py  validate_lexical_cir_cirr_rc2.py
runs/2025-12-30/test/: debug_vdr_autoencoder.py  debug_vdr_decode_full.py  debug_vdr_linear_invertible.py  debug_vdr_shapes.py  debug_vdr_v2h.py  test_2.py
src/deim2026/image_db/: builder.py  cli.py  embedder.py  io.py
src/ir/: __init__.py
src/ir/encoder/: vdr_crossmodal_image.py
src/ir/retriever/: retriever.py
src/ir/training/: model_utils.py
