[project]
name = "deim2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "lightning>=2.6.0",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "nvidia-ml-py>=13.580.82",
    "pip>=25.3",
    "pytest>=9.0.1",
    "sgmllib3k>=1.0.0",
    "spacy>=3.8.11",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "transforms>=0.2.1",
    "wordcloud>=1.9.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
